[package]
name = "fractic-env-config"
version = "0.2.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
aws-config = "1.5.1"
aws-sdk-secretsmanager = "1.35.0"
convert_case = "0.8"
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
once_cell = "1"
proc-macro2 = "1"
quote = "1"
serde_json = "1.0.118"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
once_cell = "1.19.0"
