[package]
name = "fractic-context"
version = "2.0.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
aws-config = "1.5.1"
aws-sdk-secretsmanager = "1.35.0"
convert_case = "0.8.0"
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
once_cell = "1.19.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = "1.0.118"
syn = { version = "2.0.104", features = ["full"] }
